--- a/style.css
+++ b/style.css
@@ -13,18 +13,9 @@ body {
   font-family: "Poppins", sans-serif;
   margin-top: 130px;
 }
-.card {
-  box-shadow: 0px 0px 3px 1px var(--white);
-  max-width: 430px;
-  height: 750px;
-  margin-left: 50%;
-  transform: translateX(-50%);
-  border-radius: 24px;
-  padding: 40px 50px;
-  position: relative;
-}
+
 .profile__picture {
-  background-image: url("imgs/perfil.jpg");
+  background-image: url("imgs/profile.jpg");
   height: 100px;
   width: 100px;
   background-size: cover;
@@ -35,6 +26,56 @@ body {
   box-shadow: 0px 0px 2px 2px var(--lightGreen);
   margin-left: 50%;
   transform: translateX(-50%);
+}
+
+.card {
+box-shadow: 0px 0px 3px 1px var(--white);
+max-width: 430px;
+height: 750px;
+
+/* 
+margin-left: 50%;
+transform: translateX(-50%); */
+border-radius: 24px;
+position: relative;
+padding: 40px 50px;
+background: linear-gradient(0deg, black, rgb(44, 43, 43));
+margin: 10% auto 0;
+
+}
+
+.glow::before,
+.glow::after {
+  content: '';
+  border-radius: 24px;
+  position: absolute;
+  left: -2px;
+  top: -2px;
+  background: linear-gradient(45deg, #e6fb04, #ff6600, #00ff66, #ff00ff, #6e0dd0, #ff3300, #09eeff);
+  background-size: 400%;
+  width: calc(100%);
+  height: calc(100% + 5px);
+  z-index: -1;
+  animation: animate 20s linear infinite;
+} 
+
+@keyframes animate {
+  0% {
+    background-position: 0 0;
+  }
+
+  50% {
+    background-position: 400% 0;
+  }
+
+  100% {
+    background-position: 0 0;
+  }
+}
+
+.glow::after {
+  filter: blur(20px);
+  opacity: 0.99;
 }
 
 .profile__name {
@@ -402,7 +443,7 @@ label input {
 
 @media only screen and (min-width: 601px) {
   .card {
-    margin-left: 50%;
+ /*    margin-left: 50%; */
     margin-top: 0;
     width: 100%;
   }
