--- a/style.css
+++ b/style.css
@@ -10,7 +10,8 @@
 
 body {
   background-color: var(--darkBlue);
-  font-family: "Poppins", sans-serif;
+  font-family: "Poppins", sans-serif; 
+  /* font-family: "Lucida Console", Courier, monospace; */
   margin-top: 50px;
 }
 
@@ -51,7 +52,7 @@ margin: 10% auto 0;
   position: absolute;
   left: -2px;
   top: -2px;
-  background: linear-gradient(45deg, #e6fb04, #ff6600, #00ff66, #ff00ff, #6e0dd0, #ff3300, #09eeff);
+  background: linear-gradient(45deg,var(--blue),var(--white));
   background-size: 400%;
   width: calc(100%);
   height: calc(100% + 5px);
@@ -186,7 +187,9 @@ label input {
 
 .skills {
   display: grid;
-  grid-template-columns: 1fr 1fr 1fr;
+  -webkit-box-shadow: 1px 1px 12px 1px var(--white);
+  box-shadow: 1px 1px 12px 1px var(--white);
+  grid-template-columns: 1fr 1fr 1fr 1fr;
   text-align: center;
   transform: scale(0.85);
   margin-top: 0;
@@ -453,13 +456,15 @@ label input {
 @media only screen and (max-width: 540px) {
   .card {
     box-shadow: 0px 0px 3px 1px var(--white);
-    max-width: 390px;
-    height: 750px;
-    margin-left: 50%;
+        max-width: 285px;
+          height: 750px;
+          margin-left: 2%;
 /*     transform: translateX(-50%); */
     border-radius: 24px;
     padding: 40px 50px;
     position: relative;
+
+
   }
   label > span {
     padding: 15px 40px;
