--- a/style.css
+++ b/style.css
@@ -24,7 +24,7 @@ body {
   background-position: center;
   border-radius: 100%;
   border: 1px solid #fff;
-  box-shadow: 0px 0px 2px 2px var(--lightGreen);
+  box-shadow: 0px 0px 2px 2px var(--white);
   margin-left: 50%;
   transform: translateX(-50%);
 }
